add Bestiary & modify initiative

--- a/Anima-Beyond-Fantasy/translations/fr.json
+++ b/Anima-Beyond-Fantasy/translations/fr.json
@@ -5,6 +5,7 @@
 	"tab-psychic": "Psychisme",
 	"tab-ki": "Ki",
 	"tab-armory": "Combat",
+	"tab-gm": "MJ",
 	"char-info": "Character Information",
 	"name": "Nom",
 	"char-gender": "Genre",
@@ -403,5 +404,22 @@
 	"always": "Toujours",
 	"querry": "Demander",
 	"complex": "Complexe",
-	"metamagic": "Métamagie"
+	"metamagic": "Métamagie",
+	"bestiary": "Bestiaire",
+	"pre-visualize": "Pré-visualisation",
+	"category": "Categorie",
+	"creature": "Créature",
+	"common_people": "Gens du commun",
+	"prowler": "Furtif",
+	"fighter": "Combattant",
+	"mystic": "Mystique",
+	"psychic": "Psy",
+	"domine": "Artiste martial",
+	"natural": "Naturelle",
+	"elemental": "Élémentaire",
+	"undeath": "Non-mort",
+	"between-worlds": "Entre-monde",
+	"spirit": "Animique",
+	"peasant": "Paysan",
+	"export" : "Export"
 }
