--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -17,7 +17,7 @@
 	"class": "Classe",
 	"age": "Age",
 	"level": "Niveau",
-	"development-points": "DI",
+	"development-points": "PF",
 	"presence": "Présence",
 	"xperience-points": "XP",
 	"level-next": "Niv. suiv.",
