add who attr to bestiary creatures & add translation

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -275,7 +275,7 @@
 	"arcane-magnitude": "Magnitude Arcane",
 	"age-control": "Contrôle de l'Âge",
 	"technique-imitation": "Imitation de Techniques",
-	"inhuman-action" : "Actions Surhumaines",
+	"inhuman-action": "Actions Surhumaines",
 	"inhumanity": "Surhumanité",
 	"zen": "Zen",
 	"nemesis-abilities": "Pouvoirs du Nemesis",
@@ -421,6 +421,53 @@
 	"undeath": "Non-mort",
 	"between-worlds": "Entre-monde",
 	"spirit": "Animique",
+	"export": "Export",
 	"peasant": "Paysan",
-	"export" : "Export"
+	"hunter": "Chasseur",
+	"courtier": "Courtisan",
+	"blacksmith": "Forgeron",
+	"juggler": "Jongleur",
+	"monk": "Moine",
+	"wildman": "Sauvage",
+	"famous_bard": "Barde Célèbre",
+	"scholar": "Érudit",
+	"blacksmith_master": "Maître Armurier",
+	"illustrious_noble": "Noble Illustre",
+	"bandit": "Bandit",
+	"band_master": "Chef de bande",
+	"assassin": "Assassin",
+	"spy": "Espion",
+	"executor": "Maître Exécuteur",
+	"ninja": "Ninja",
+	"shinobi": "Shinobi",
+	"legendary_shinobi": "Shinobi Légendaire",
+	"thief": "Voleur",
+	"bruglar": "Gentleman Cambrioleur",
+	"thief_master": "Maître Voleur",
+	"thief_lord": "Prince des voleurs",
+	"militiaman": "Militien",
+	"guard": "Garde",
+	"regular_soldier": "Soldat Régulier",
+	"scout": "Éclaireur",
+	"knight": "Chevalier",
+	"veteran_soldier": "Soldat Vétéran",
+	"samouri": "Samouraï",
+	"elite_soldier": "Soldat d'élite",
+	"elite_knight": "Chevalier d'élite",
+	"praetorian": "Prétorien",
+	"captain": "Capitaine",
+	"officier": "Commandant",
+	"apprentice": "Apprenti",
+	"wizard": "Mage expert",
+	"wizard_master": "Maître Sorcier",
+	"archmage": "Archimage",
+	"invoker": "Invocateur",
+	"lord_great_beasts": "Seigneur des Grandes Bêtes",
+	"dog": "Chien",
+	"wolf": "Loup",
+	"horse": "Cheval",
+	"purebred_horse": "Pur Sang",
+	"war_horse": "Destrier de Guerre",
+	"bear": "Ours",
+	"elephant": "Éléphant"
 }
