Add Lampion&Lagor creatures (chapter27 GM book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -469,5 +469,7 @@
 	"purebred_horse": "Pur Sang",
 	"war_horse": "Destrier de Guerre",
 	"bear": "Ours",
-	"elephant": "Éléphant"
+	"elephant": "Éléphant",
+	"lampion": "Lampion",
+	"lagor": "Lagor"
 }
