--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -471,5 +471,6 @@
 	"bear": "Ours",
 	"elephant": "Éléphant",
 	"lampion": "Lampion",
-	"lagor": "Lagor"
+	"lagor": "Lagor",
+	"nezuacuatil": "Nezuacuatil"
 }
