Add shadow creature (Chapter 27 of GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -472,5 +472,6 @@
 	"elephant": "Éléphant",
 	"lampion": "Lampion",
 	"lagor": "Lagor",
-	"nezuacuatil": "Nezuacuatil"
+	"nezuacuatil": "Nezuacuatil",
+	"shadow": "Ombre"
 }
