add Damsel of Light (chapter27 GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -473,5 +473,6 @@
 	"lampion": "Lampion",
 	"lagor": "Lagor",
 	"nezuacuatil": "Nezuacuatil",
-	"shadow": "Ombre"
+	"shadow": "Ombre",
+	"damsellight": "Damoiseille de Lumière"
 }
