Add Elemental creatures (Chapter 27 of GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -474,5 +474,9 @@
 	"lagor": "Lagor",
 	"nezuacuatil": "Nezuacuatil",
 	"shadow": "Ombre",
-	"damsellight": "Damoiseille de Lumière"
+	"damsellight": "Damoiseille de Lumière",
+	"effrit": "Effrit",
+	"titan": "Titan",
+	"undine": "Ondine",
+	"sylph": "Sylphe"
 }
