--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -478,5 +478,6 @@
 	"effrit": "Effrit",
 	"titan": "Titan",
 	"undine": "Ondine",
-	"sylph": "Sylphe"
+	"sylph": "Sylphe",
+	"hecatonchire": "Hécatonchire"
 }
