Add grendel creature (Chapter27 GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -479,5 +479,6 @@
 	"titan": "Titan",
 	"undine": "Ondine",
 	"sylph": "Sylphe",
-	"hecatonchire": "Hécatonchire"
+	"hecatonchire": "Hécatonchire",
+	"grendel": "Grendel"
 }
