add dragons creatures (chapter27 GM book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -480,5 +480,8 @@
 	"undine": "Ondine",
 	"sylph": "Sylphe",
 	"hecatonchire": "Hécatonchire",
-	"grendel": "Grendel"
+	"grendel": "Grendel",
+	"minordragon": "Dragon mineur",
+	"majordragon": "Dragon majeur",
+	"antikdragon": "Dragon Antique"
 }
