Add zombie creature (chapter27 GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -483,5 +483,6 @@
 	"grendel": "Grendel",
 	"minordragon": "Dragon mineur",
 	"majordragon": "Dragon majeur",
-	"antikdragon": "Dragon Antique"
+	"antikdragon": "Dragon Antique",
+	"zombie": "Zombie"
 }
