Add slaughterer creature (Chapter27 GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -484,5 +484,6 @@
 	"minordragon": "Dragon mineur",
 	"majordragon": "Dragon majeur",
 	"antikdragon": "Dragon Antique",
-	"zombie": "Zombie"
+	"zombie": "Zombie",
+	"slaughterer": "Égorgeur"
 }
