Add asagiri creatures (chapter27 GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -485,5 +485,6 @@
 	"majordragon": "Dragon majeur",
 	"antikdragon": "Dragon Antique",
 	"zombie": "Zombie",
-	"slaughterer": "Égorgeur"
+	"slaughterer": "Égorgeur",
+	"asagiri": "Asagiri"
 }
