Add filisnogos creature (chapter27 GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -486,5 +486,6 @@
 	"antikdragon": "Dragon Antique",
 	"zombie": "Zombie",
 	"slaughterer": "Égorgeur",
-	"asagiri": "Asagiri"
+	"asagiri": "Asagiri",
+	"filisnogos": "Filisnogos"
 }
