Add aberration creature (Chapter27 GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -487,5 +487,6 @@
 	"zombie": "Zombie",
 	"slaughterer": "Égorgeur",
 	"asagiri": "Asagiri",
-	"filisnogos": "Filisnogos"
+	"filisnogos": "Filisnogos",
+	"aberration": "Aberration"
 }
