Add shadowlord creature (Chapter27 GM Book)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -488,5 +488,6 @@
 	"slaughterer": "Égorgeur",
 	"asagiri": "Asagiri",
 	"filisnogos": "Filisnogos",
-	"aberration": "Aberration"
+	"aberration": "Aberration",
+	"shadowlord": "Seigneur des Ténèbres"
 }
