Fix translation of spell's INT requirement

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -352,8 +352,10 @@
 	"wear-armor": "Port d'Armure",
 	"quality": "Qualité",
 	"fortitude": "Solidité",
-	"requirement": "PA Requis",
-	"requirement-short": "PA",
+	"int-requirement": "INT Requise",
+	"int-requirement-short": "INT",
+	"armor-requirement": "PA Requis",
+	"armor-requirement-short": "PA",
 	"armormalus": "Malus d'armure",
 	"cut": "TRA",
 	"impact": "CON",
