Fix fewer bugs (most of them were invalid escape)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -476,7 +476,7 @@
 	"lagor": "Lagor",
 	"nezuacuatil": "Nezuacuatil",
 	"shadow": "Ombre",
-	"damsellight": "Damoiseille de Lumière",
+	"damsellight": "Damoiselle de Lumière",
 	"effrit": "Effrit",
 	"titan": "Titan",
 	"undine": "Ondine",
