Add archchimera creature (CQMPN p.11)

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -491,5 +491,6 @@
 	"asagiri": "Asagiri",
 	"filisnogos": "Filisnogos",
 	"aberration": "Aberration",
-	"shadowlord": "Seigneur des Ténèbres"
+	"shadowlord": "Seigneur des Ténèbres",
+	"archchimera" : "Archichimère"
 }
