Add generic attack in magic, psychic and fight tab

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -376,6 +376,7 @@
 	"proficiency-style": "Style",
 	"proficiency-mystical": "Mystique",
 	"proficiency-psychic": "Psychique",
+	"generic": "Générique",
 	"attacks": "Attaques",
 	"speed": "Vitesse",
 	"shield": "Bouclier",
