Add some creatures of CQMPN book
Behemoth, Infernal Duc, Omega Shadow, Hecatonshire Sigma & Shinigami
major

--- a/Anima-Beyond-Fantasy-Script/translations/fr.json
+++ b/Anima-Beyond-Fantasy-Script/translations/fr.json
@@ -493,5 +493,10 @@
 	"filisnogos": "Filisnogos",
 	"aberration": "Aberration",
 	"shadowlord": "Seigneur des Ténèbres",
-	"archchimera" : "Archichimère"
+	"archchimera" : "Archichimère",
+	"behemoth" : "Behemoth",
+	"infernal_duc" : "Duc Infernal",
+	"omega_shadow" : "L'ombre d'Omega",
+	"hecatonshire_sigma" : "Hécatonshire Sigma",
+	"shinigami_major" : "Shinigami majeur"
 }
